fixed social cropping

--- a/resources/styles/app.css
+++ b/resources/styles/app.css
@@ -1179,6 +1179,7 @@ adds spacing around the "all power to the people" section */
 
 .socials img {
     max-height: 25px;
+    border-radius:0;
 }
 
 .about-2 {
